--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,19 @@
 
 
-.col-xs-12{
-    border: 1px solid black;
-    /* margin: 20px; */
+#text {
     background-color: rgb(180, 176, 176);
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 50px;
+    width: 100%;
+    margin-bottom: 15px;
+    position: relative;
+    border: 1px solid black;
+    padding: 20px;
+    overflow: hidden;
     
+  }
+
+.col{
+    padding-right: 40px;
+    padding-left: 40px;
 }
 
 h1{
